--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     
 <head>
-        <meta http-equiv="refresh" content="0; URL=https://linktr.ee/experts_casino" />
+        <meta http-equiv="refresh" content="0; URL=https://t.me/bezdepcasinoRX" />
 </head>
 
 </html>
