--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     
 <head>
-        <meta http-equiv="refresh" content="0; URL=https://t.me/+zEtKwWZprnIzMmYy" />
+        <meta http-equiv="refresh" content="0; URL=https://expert-casino.vercel.app/" />
 </head>
 
 </html>
